public/stylesheets/partials/_liquid.scss
@import "compass/utilities/general/clearfix";
@import "compass/utilities/general/float";

// Main layout grid, override these constants to build your grid and container sizes.
// The width shown gives the right floored percentage values.
$blueprint-liquid-grid-columns: 24 !default;

$blueprint-liquid-grid-width: 3.167% !default;

$blueprint-liquid-grid-margin: 1.042% !default;

// Do not edit below this line unless you really know what you're doing.
$blueprint-liquid-container-width: 80% !default;

$blueprint-liquid-container-min-width: 950px !default;

$blueprint-liquid-grid-push-pull: -($blueprint-liquid-grid-margin + $blueprint-liquid-grid-width) !default;

@mixin container {
  min-width: $blueprint-liquid-container-min-width;
  width: $blueprint-liquid-container-width;
  margin: 0;
  @include clearfix; }

@mixin span($n, $override: false) {
  $width: $blueprint-liquid-grid-width * $n + $blueprint-liquid-grid-margin * ($n - 1);
  @if $override {
    width: $width !important; }
  @else {
    width: $width; } }

@mixin last {
  margin-right: 0; }

@mixin column($n, $last: false) {
  @include float-left;
  overflow: hidden;
  @include span($n);
  @if $last {
    @include last; }
  @else {
    margin-right: $blueprint-liquid-grid-margin; } }

@mixin append($n) {
  padding-right: ($blueprint-liquid-grid-width + $blueprint-liquid-grid-margin) * $n; }

@mixin prepend($n) {
  padding-left: ($blueprint-liquid-grid-width + $blueprint-liquid-grid-margin) * $n; }

@mixin pull($n, $last: false) {
  margin-left: $blueprint-liquid-grid-push-pull * $n; }

@mixin push($n) {
  @include float-right;
  margin: {
    top: 0;
    left: $blueprint-liquid-grid-margin;
    right: $blueprint-liquid-grid-push-pull * $n;
    bottom: 0; }; }

@mixin border {
  border-right: 1px solid #eeeeee; }

@mixin colborder {
  padding-right: $blueprint-liquid-grid-margin * 2;
  margin-right: $blueprint-liquid-grid-margin * 2;
  @include border; }

@mixin colruler {
  background: #dddddd;
  color: #dddddd;
  clear: both;
  width: 100%;
  height: 0.083em;
  margin: 0;
  margin-left: $blueprint-liquid-grid-margin * 2;
  margin-right: $blueprint-liquid-grid-margin * 2;
  border: none; }

@mixin colspacer {
  @include colruler;
  background: white;
  color: white; }
  
@mixin footer {
  width: 99.84%;
  margin: 0px 1px 1px 0px;
  position: absolute;
  bottom: 0;
}

